--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li><a href="Tantque.html">La boucle Tant que</a></li>
                 <li><a href="Listes.html">Les listes</a></li>
                 <li><a href="Tuples.html">Tuples et chaînes de caractères</a></li>
-                <li>Dictionnaires</li>
+                <li><a href="Dictionnaires.html">Dictionnaires</a></li>
                 <li>
                     <ol class="sous-num">
                         <li><a href="triSelection.html">Tri par sélection</a></li>
