--- a/Dictionnaires.html
+++ b/Dictionnaires.html
@@ -76,7 +76,7 @@
                     print("J'ai", panier["pomme"], "pommes dans mon panier.")<font class="commentaire"># 4 pommes</font><br/>
                     print("J'ai", panier["cerise"], "cerises dans mon panier.")<font class="commentaire"># génère une erreur</font><br/>
                     print("J'ai", panier.get("pomme", 0), "pommes dans mon panier.")<font class="commentaire"># 4 pommes</font><br/>
-                    print("J'ai", panier.get("cerise", 0), "cerises dans mon panier.")<font class="commentaire"># génère une erreur</font><br/>
+                    print("J'ai", panier.get("cerise", 0), "cerises dans mon panier.")<font class="commentaire"># 0 cerises</font><br/>
                 </p>
             </div>
             <h2>Parcourir un dictionnaire</h2>
