--- a/Dictionnaires.html
+++ b/Dictionnaires.html
@@ -121,7 +121,7 @@
                 <p class="code">
                     panier = {"poire":3, "pomme":4, "orange":2} <br/>
                     for association in panier<mark>.items()</mark> :<br/>
-                    &nbsp;&nbsp;&nbsp;&nbsp; association <br/>
+                    &nbsp;&nbsp;&nbsp;&nbsp; print(association) <br/>
                 </p>
             </div>
             <h2>Exercices</h2>
