--- a/Dictionnaires.html
+++ b/Dictionnaires.html
@@ -162,9 +162,9 @@
             </p>
             <div class="exercice">
                 <ol>
-                    <li>Ecrire une fonction <mark class="code">releve_vide()</mark> qui retourne un relevé de note vide</li>
+                    <li>Ecrire une fonction <mark class="code">creer_releve_vide()</mark> qui retourne un relevé de note vide</li>
                     <li>Ecrire une fonction : <br/>
-                        <mark class="code">ajouter_note(releve, nom, barème, coefficient, note)</mark> qui ajoute une nouvelle note au relevé de note <mark class="code">releve</mark>.</li>
+                        <mark class="code">ajouter_note(releve, nom, bareme, coefficient, note)</mark> qui ajoute une nouvelle note au relevé de note <mark class="code">releve</mark>.</li>
                     <li>Ecrire une fonction <mark class="code">retirer_note(releve, nom)</mark> qui retire le devoir répondant au bon <mark class="code">nom</mark> au relevé de note <mark class="code">releve</mark>.</li>
                     <li>Ecrire une fonction <mark class="code">calculer_moyenne(releve)</mark> qui calcule la moyenne des notes du relevé de note <mark class="code">releve</mark>.</li>
                 </ol>
