--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                         <li><a href="algorithmie.html">Algorithmie : terminaison, correction, complexité</a></li>
                     </ol>
                 </li>
+                <li><a href="Fichiers.html">Manipuler des fichiers</a></li>
                 <li>Dichotomie</li>
                 <li>Plus proches voisins</li>
                 <li><a href="glouton.html">Algorithmes gloutons</a></li>
