--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </li>
                 <li><a href="Fichiers.html">Manipuler des fichiers</a></li>
                 <li>Dichotomie</li>
-                <li>Plus proches voisins</li>
+                <li><a href="plusprochesvoisins.html">Plus proches voisins</a></li>
                 <li><a href="glouton.html">Algorithmes gloutons</a></li>
                 <li><a href="tkinter.html">Interface graphique avec Tkinter</a></li>
             </ol>
